Adding content to Gaelic
Closes #36

--- a/case-studies.tex
+++ b/case-studies.tex
@@ -34,14 +34,24 @@ Kornai & Living \\ \hline
 \subsubsection{Language resources}
 \label{subsec:gaelic-resources}
 
-Gaelic has a long, written history. Today, there are a plethora of written, audio, and video resources. Some of these have been bundled into linguistic corpora. The DASG is the largest corpus for Gaelic available on the web; however, it is not permissively licensed for modification, distribution, or reproduction, and so cannot be considered open source (although it is open access).\footnote{\href{http://dasg.ac.uk/about/terms/en}{http://dasg.ac.uk/about/terms/en}. \last{April~27}} OLAC has 26 resources for Gaelic, including large multilingual corpora, as well.\footnote{\href{http://www.language-archives.org/language/gla}{http://www.language-archives.org/language/gla}. \last{April~27}} A large corpus compiled by An Crub\'ad\'an is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}. \last{April~27}} \citep{scannell2007crubadan}. WALS has 61 typological features listed for Gaelic,\footnote{\href{http://wals.info/languoid/lect/wals_code_gae}{http://wals.info/languoid/lect/wals\_code\_gae}. \last{April~27}} and Glottolog 35 references.\footnote{\href{http://glottolog.org/resource/languoid/id/scot1245}{http://glottolog.org/resource/languoid/id/scot1245}. \last{April~27}} ODIN has 59 IGT entries for Scottish Gaelic.\footnote{\href{http://odin.linguistlist.org/}{http://odin.linguistlist.org/}. \last{April~27}}
+Gaelic has a long, written history. Today, there are a plethora of written, audio, and video resources. Some of these have been bundled into linguistic corpora.
+
+\citet{bauer2014salt} gives an overview of how to get language development bootstrapped by using a translator, a lexicographer, and a software developer along with a dedicated roadmap of intentions and goals. In this paper, he gives a good overview of the state of Gaelic digitally.
+
+\begin{quote}
+  The first digital Gaelic tool - the St\`{o}r-d\`{a}ta,\footnote{\href{http://www2.smo.uhi.ac.uk/gaidhlig/faclair/sbg/lorg.php}{http://www2.smo.uhi.ac.uk/gaidhlig/faclair/sbg/lorg.php}. \last{May~4}} an online termbase - appeared in 1994. Between 1994 and 2008, about a dozen other tools appeared, most of which then fell dormant for a period (the Opera web browser,\footnote{\href{https://www.opera.com/}{https://www.opera.com/}. \last{May~4}} OpenOffice.org\footnote{\href{http://www.openoffice.org/}{http://www.openoffice.org/}. \last{May~4}} and the Ning-based social network AbairThusa) or died off when funding/support ran out or the localizer moved on. Since the end of 2009 however, just over 50 additional programs and tools have appeared, ranging from games and web-apps through predictive texting tools to operating systems (Ubuntu,\footnote{\href{https://www.ubuntu.com/}{https://www.ubuntu.com/}. \last{May~4}} Windows\footnote{\href{https://www.microsoft.com/}{https://www.microsoft.com/}. \last{May~4}} and the upcoming Mozilla OS\footnote{This has since been shipped, and discontinued. \href{https://support.mozilla.org/en-US/products/firefox-os}{https://support.mozilla.org/en-US/products/firefox-os}. \last{May~4}}), allowing users to conduct a large percentage of their daily IT through the medium of Gaelic.
+
+  These were almost all created by two (largely) unpaid part-time localizers and two (largely) unpaid part-time developers. Their time involvement is difficult to quantify but an estimate puts it at 1.5 FTE of localizer and lexicographer time and 0.5 of a FTA of developer time over the last four years.
+\end{quote}
+
+Outside of these efforts, there are language resources available. The DASG is the largest corpus for Gaelic available on the web; however, it is not permissively licensed for modification, distribution, or reproduction, and so cannot be considered open source (although it is open access).\footnote{\href{http://dasg.ac.uk/about/terms/en}{http://dasg.ac.uk/about/terms/en}. \last{April~27}} OLAC has 26 resources for Gaelic, including large multilingual corpora, as well.\footnote{\href{http://www.language-archives.org/language/gla}{http://www.language-archives.org/language/gla}. \last{April~27}} A large corpus compiled by An Crub\'ad\'an is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}. \last{April~27}} \citep{scannell2007crubadan}. WALS has 61 typological features listed for Gaelic,\footnote{\href{http://wals.info/languoid/lect/wals_code_gae}{http://wals.info/languoid/lect/wals\_code\_gae}. \last{April~27}} and Glottolog 35 references.\footnote{\href{http://glottolog.org/resource/languoid/id/scot1245}{http://glottolog.org/resource/languoid/id/scot1245}. \last{April~27}} ODIN has 59 IGT entries for Scottish Gaelic.\footnote{\href{http://odin.linguistlist.org/}{http://odin.linguistlist.org/}. \last{April~27}}
 
 Some of these corpora are annotated - for instance, the Annotated Reference Corpus of Scottish Gaelic (ARCOSG)\footnote{\href{https://datashare.is.ed.ac.uk/handle/10283/2011}{https://datashare.is.ed.ac.uk/handle/10283/2011}. \last{April~27}} \citep{ARCOSG2016, lamb2014scottish}, which used an Irish POS tagger \citep{ui2006part} to project annotations, and which was funded by the B\`ord na G\`aighlig. This resource was used to automatically derive categorial grammars \citep{batchelor2016automatic}, and to develop POS taggers directly for Gaelic \citep{lamb2014developing}. A dependency-structure corpus is being developed \citep{batchelor2014gdbank}, as are word-embedding models \citep{lamb2016developing}. The source code for \citet{batchelor2014gdbank, batchelor2016automatic} is available on GitHub.\footnote{\href{https://github.com/colinbatchelor/gdbank/}{https://github.com/colinbatchelor/gdbank/}. \last{April~27}} Some of these papers were presented at the first Celtic Language Technology Workshop in Dublin in 2014. The amount of resources show clearly that Gaelic is not entirely on the fringe of academic research, although it is generally considered a low resource language.
 
-\citet{scannell2007crubadan} and contributors\footnote{\href{http://crubadan.org/acknowldegments}{http://crubadan.org/acknowldegments}. \last{May~2}} used the Cr\'ubad\'an corpus to create an open source Hunspell spellchecker,\footnote{\href{https://github.com/kscanne/hunspell-gd}{https://github.com/kscanne/hunspell-gd}. \last{April~27}} which is the spellchecker for "LibreOffice, OpenOffice.org, Mozilla Firefox 3 and Thunderbird, Google Chrome, and it is also used by proprietary software packages, like macOS, InDesign, memoQ, Opera and SDL Trados."\footnote{\href{https://hunspell.github.io/}{https://hunspell.github.io/}. \last{April~27}} This spellchecker was built with the help of Michael Bauer, an independent Gaelic technologist who runs a small Gaelic technology consultancy called Am Faclair Beag,\footnote{\href{http://www.faclair.com/}{http://www.faclair.com/}. \last{April~27}} and also has ports for OpenOffice directly\footnote{\href{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}. \last{April~27}} and a Firefox extension.\footnote{\href{https://extensions.openoffice.org/en/project/faclair-afb}{https://extensions.openoffice.org/en/project/faclair-afb}. \last{April~27}} An Faclair Beag also offers an online dictionary with over 85k words\footnote{\href{http://www.faclair.com/GaelicDictionaryAbout.html\#About}{http://www.faclair.com/GaelicDictionaryAbout.html\#About}. \last{April~27}}
- (and almost a million forms\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html}. \last{April~27}}) and in inbuilt lemmatizer.\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html}. \last{April~27}} Another spellchecker also exists on GitHub,\footnote{\href{https://github.com/gooselinux/hunspell-gd}{https://github.com/gooselinux/hunspell-gd}. \last{April~27}} but it is probably derivative, and it has not been worked on recently.
+\citet{scannell2007crubadan} and contributors\footnote{\href{http://crubadan.org/acknowldegments}{http://crubadan.org/acknowldegments}. \last{May~2}} used the Cr\'ubad\'an corpus to create an open source Hunspell spellchecker,\footnote{\href{https://github.com/kscanne/hunspell-gd}{https://github.com/kscanne/hunspell-gd}. \last{April~27}} which is the spellchecker for "LibreOffice, OpenOffice.org, Mozilla Firefox 3 and Thunderbird, Google Chrome, and it is also used by proprietary software packages, like macOS, InDesign, memoQ, Opera and SDL Trados."\footnote{\href{https://hunspell.github.io/}{https://hunspell.github.io/}. \last{April~27}} This spellchecker was built with the help of Michael Bauer of \citet{bauer2014salt}, an independent Gaelic technologist who runs a small Gaelic technology consultancy called Am Faclair Beag,\footnote{\href{http://www.faclair.com/}{http://www.faclair.com/}. \last{April~27}} and also has ports for OpenOffice directly\footnote{\href{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}. \last{April~27}} and a Firefox extension.\footnote{\href{https://extensions.openoffice.org/en/project/faclair-afb}{https://extensions.openoffice.org/en/project/faclair-afb}. \last{April~27}} An Faclair Beag also offers an online dictionary with over 85k words\footnote{\href{http://www.faclair.com/GaelicDictionaryAbout.html\#About}{http://www.faclair.com/GaelicDictionaryAbout.html\#About}. \last{April~27}}
+(and almost a million forms\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html}. \last{April~27}} \citep{bauer2014salt}) and in in-built lemmatizer.\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html}. \last{April~27}} Another spellchecker exists on GitHub,\footnote{\href{https://github.com/gooselinux/hunspell-gd}{https://github.com/gooselinux/hunspell-gd}. \last{April~27}} but it is probably derivative, and it has not been worked on recently.
 
- More complicated, higher level technology also exists. Previous academic work on Gaelic text-to-speech systems (TTS) stretches back at least 20 years; a diphone text-to-speech system for Gaelic was developed, for instance, in 1997, by \citet{wolters1997diphone}, although that is not open source. Today, there is a proprietary synthetic TTS system called Ceitidh\footnote{\href{https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh}{https://www.cereproc.com/en/CereProc\_Gaelic\_Synthetic\_Voice\_Ceitidh}. \last{April~27}} (pronounced `Katie'), created by a private Gaelic company together with funding from the Scottish Government and the B\`ord na G\`aidghlig. Although Ceitidh is available to developers and students at a reduced or free fee, it is not entirely open source. There are almost no open source sound resources. The main reason is that there is no overall quality assurance for Gaelic sound uploaded online. For large languages, this is not a problem; however, for smaller languages, the size of the corpus means that much of the content may come from only a few sources, none of which may be ideal. This issue may involve general lack of relevance of sound files, or poor quality recordings, or any dialect or non-mainstream features slipping in. Ceitidh was based on original audio files from Kirsteen MacDonald (in Gaelic, Kirsteen NicDh\`{o}mhnaill), some of whose content (while not vetted by an independent linguist) are available on LearnGaelic.scot,\footnote{\href{https://learngaelic.scot/}{https://learngaelic.scot/}. \last{April~27}} which could be hypothetically used to build an open source TTS system. However, quality assurance would be an arduous step.
+More complicated, higher level technology has been developed. Previous academic work on Gaelic text-to-speech systems (TTS) stretches back at least 20 years; a diphone text-to-speech system for Gaelic was developed, for instance, in 1997, by \citet{wolters1997diphone}, although that is not open source. Today, there is a proprietary synthetic TTS system called Ceitidh\footnote{\href{https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh}{https://www.cereproc.com/en/CereProc\_Gaelic\_Synthetic\_Voice\_Ceitidh}. \last{April~27}} (pronounced `Katie'), created by a private Gaelic company together with funding from the Scottish Government and the B\`ord na G\`aidghlig. Although Ceitidh is available to developers and students at a reduced or free fee, it is not entirely open source. There are almost no open source sound resources. The main reason is that there is no overall quality assurance for Gaelic sound uploaded online. For large languages, this is not a problem; however, for smaller languages, the size of the corpus means that much of the content may come from only a few sources, none of which may be ideal. This issue may involve general lack of relevance of sound files, or poor quality recordings, or any dialect or non-mainstream features slipping in. Ceitidh was based on original audio files from Kirsteen MacDonald (in Gaelic, Kirsteen NicDh\`{o}mhnaill), some of whose content (while not vetted by an independent linguist) are available on LearnGaelic.scot,\footnote{\href{https://learngaelic.scot/}{https://learngaelic.scot/}. \last{April~27}} which could be hypothetically used to build an open source TTS system. However, quality assurance would be an arduous step.
 
 Navigating resources to identify what is open source and what is not is difficult. As mentioned in Section~\ref{subsec:where-is-open-source-code}, one of the OSI's definitions for open source was that it be well publicised. This cannot be said to be the case for coding resources for Gaelic; there is no central location for viewing tools. The LRE Map has no Gaelic resources, although a POS Tagger, two corpora, a tokenizer, and Babouk corpus tool resource are mentioned for Irish.\footnote{\href{http://www.resourcebook.eu/searchll.php}{http://www.resourcebook.eu/searchll.php}. \last{April~27}} Linghub returns 30 entries - not many, considering it is an aggregator.\footnote{\href{http://linghub.org/search/?query=Gaelic}{http://linghub.org/search/?query=Gaelic}. \last{April~27}} GitHub returns 62 repositories that mention Gaelic,\footnote{\href{https://github.com/search?q=gaelic}{https://github.com/search?q=gaelic}. \last{April~27}} although it is unclear if these are for Irish.
 
@@ -49,7 +59,21 @@ The best resource is arguably Kornai's lab page\footnote{\href{https://hlt.bme.h
 
 As far as I am aware, the highest amount of code resources for Gaelic which are directly linked and open source is the corpus described in Section~\ref{sec:solutions}. There are six resources mentioned in the list,\footnote{\href{https://github.com/RichardLitt/low-resource-languages\#scottish-gaelic}{https://github.com/RichardLitt/low-resource-languages\#scottish-gaelic}. \last{April~27}} which was largely sourced by manually inspecting each of the GitHub repositories mentioning "Gaelic", and also through personal curation during general research for this paper.
 
-Ideally, researchers would start to open source more of their code involving Gaelic. However, there are so few researchers and language communities currently working on Gaelic HLT that this may be a na\"{i}ve wish. Indeed, the main researcher over the past decade for Gaelic releases most of his code publicly - that is, Kevin Scannell of \citet{scannell2007crubadan}. And his focus is mainly on Irish. One solution would be to implement a Scottish Gaelic computational linguistics course at one of the major Scottish universities, such as the University of Edinburgh, Glasgow, St. Andrews, or potentially at Sabhal M\`or Ostaig. This option would reward further lines of inquiry.
+Ideally, researchers would start to open source more of their code involving Gaelic. However, there are so few researchers and language communities currently working on Gaelic HLT that this may be a na\"{i}ve wish. Indeed, the main two researchers over the past decade for Gaelic releases have released most of their code publicly, and are generally willing to collaborate with anyone who wants to put in the effort to help develop them further.
+
+\citet{bauer2014salt} ends with these takeaways:
+
+\begin{quote}
+\begin{itemize}
+  \item Dissemination of information, user support and promotion must be considered at an early stage, as such tools will not simply disseminate through their mere existence.
+  \item FOSS is harder to `sell' to everyday users but ultimately the only really sustainable model for small and medium languages in most cases.
+  \item It is nonetheless very doable, as since 2009 Gaelic has acquired a lot of new SALT through the work of small group of people and any language development agency should seriously consider supporting or setting up such a group.
+\end{itemize}
+\end{quote}
+
+All of these are important messages, particularly regarding open source and LRL research.
+
+One possible solution for the problem of finding developers interested in working on Gaelic would be to implement a Scottish Gaelic computational linguistics course at one of the major Scottish universities, such as the University of Edinburgh, Glasgow, St. Andrews, or potentially at Sabhal M\`or Ostaig. This option would reward further lines of inquiry.
 
 \subsection{Naskapi}
 \label{sec:naskapi}
@@ -121,7 +145,7 @@ One of the most important sources for Cree Unicode fonts is the LanguageGeek web
 
 \subsubsection{Corpora creation}
 
-In recent years, the Naskapi Development Council (NDC), which works with translators provided by the Band, has produced a Naskapi to English bilingual dictionary in three volumes \citep{MacKenzie-and-Jancewicz-1994}. The NDC is largely staffed by linguists from the Summer Institute of Linguistics, funded by Wycliffe Bible Translators and private fundraising from Christian communities.\footnote{\href{https://www.wycliffe.org/}{https://www.wycliffe.org/}. \last{April~27}} Today, the SIL linguists are a team of six: two long term linguists, and two pairs of husband and wife pairs who are training how to work as Bible translators in this community before moving on to working with other Cree communities in Canada. 
+In recent years, the Naskapi Development Council (NDC), which works with translators provided by the Band, has produced a Naskapi to English bilingual dictionary in three volumes \citep{MacKenzie-and-Jancewicz-1994}. The NDC is largely staffed by linguists from the Summer Institute of Linguistics, funded by Wycliffe Bible Translators and private fundraising from Christian communities.\footnote{\href{https://www.wycliffe.org/}{https://www.wycliffe.org/}. \last{April~27}} Today, the SIL linguists are a team of six: two long term linguists, and two pairs of husband and wife pairs who are training how to work as Bible translators in this community before moving on to working with other Cree communities in Canada.
 
 Naskapi does not have a complete Bible. A new testament, started in the 1970's, was recently published \citep{naskapi-new-testament}. Genesis, Exodus, and Psalms, have also been translated, and several children stories and books of oral legends from an elder have been produced - as well, \citet{jancewicz2002applied} note the creation of a monthly newsletter, a history, and translations of official business of the administrations (which may provide excellent multilingual corpora). The full-time translators are two people: a young woman in her mid-twenties, and an older man of around fifty years of age. At times, elders also contribute to the Bible translation effort by marking up pre-publication drafts, which they then go over with the translators.
 
